Add execution checks for Bundler and Vagrant

--- a/bin/build
+++ b/bin/build
@@ -1,3 +1,12 @@
-require_relative '../lib/builderator/tasks'
+#!/usr/bin/env ruby
+unless ENV.include?('BUNDLE_GEMFILE')
+  puts "It looks like you're trying to run Builderator outside of Bundler. "\
+  'This is aggressively discouraged! Please re-run your command prepended with '\
+  '`bundle exec`'
+  puts ''
+  puts 'See http://bundler.io/ for help setting up Bundler and creating a Gemfile'
+  exit 1
+end
 
+require_relative '../lib/builderator/tasks'
 Builderator::Tasks::CLI.start(ARGV)
