Some opinionated changes... -> Error message when executed outside of Bundler -> Name of CONSTANT that the gem path is stored in

--- a/bin/build
+++ b/bin/build
@@ -1,10 +1,15 @@
 #!/usr/bin/env ruby
 unless ENV.include?('BUNDLE_GEMFILE')
-  puts "It looks like you're trying to run Builderator outside of Bundler. "\
-  'This is aggressively discouraged! Please re-run your command prepended with '\
-  '`bundle exec`'
   puts ''
-  puts 'See http://bundler.io/ for help setting up Bundler and creating a Gemfile'
+  puts '   / \\'
+  puts '  | ^ |'
+  puts "  ಠ _ ಠ  It looks like you're trying to run Builderator outside of Bundler!"
+  puts '  || ||  This is aggressively discouraged! Please re-run your command'
+  puts '  || ||  prepended with `bundle exec`'
+  puts '  || ||'
+  puts '  |  |   See http://bundler.io/ for help setting up Bundler and creating a Gemfile'
+  puts '   \\/'
+  puts ''
   exit 1
 end
 
